2005-09-01  Rodrigo Moya <rodrigo@novell.com>

	* autogen.sh:
	* configure.in:
	* Makefile.am:
	* config/Makefile.am:
	* nact/Makefile.am:
	* plugin/Makefile.am: added auto* setup.

	* nact/nact.desktop.in:
	* nact/nautilus-actions-config.in: renamed.

	* po/*: added basic GETTEXT support.
	
	* plugin/*: moved plugin implementation to its own module.

* Wed Aug 31 2005 Frederic Ruaudel <grumz@grumz.net> 0.5
- Fix bug with special characters in new config name in nact #66
- Change the default per user folder config path to the one define 
by fd.o (~/.config/.nautilus-actions)
- In nact, create the per user config folder if it doesn't exist bug #59 and move the old one if it exists to the new one.
- In nact fix the problem with Delete Config button that stay greyed after a deletion even after selecting another config.
- In NACT, add a confirm dialog with trying to close without saving the changes (bug #60)
- In nact, now display system wide config in read only mode and a Preference menu has been added to switch this display on or off
- In nact, in normal user mode, if a config is created with the same name as a system-wide one, it is overwritten (it already works for the extension since 0.4)
- In nact, fix a bug that prevent creating a new config with the same name as a just deleted one if save wasn't pressed between the two event. 

* Sun Aug 28 2005 Frederic Ruaudel <grumz@grumz.net> 0.4
- Add -fPIC option in the Makefile to make nautilus-actions compile on 64bits arch
- Apply patch from Ed Catmur that add DESTDIR var in Makefile for gentoo ebuild
- Add the desktop file for nact submited by Ed Catmur
- Add per user config possibility. Per user config are saved by default in ~/.nautilus-actions
- NACT has been updated to manage per user config. If launch as normal user, it edit the user
config and if launched as root, it manage system wide config.
- add LICENSE file of the GNU GPL License
- Update authors and contributors list