@@ -80,8 +80,8 @@ Makefile
 plugin/Makefile
 config/Makefile
 nact/Makefile
-nact/nautilus-actions-config
 nact/nact.desktop.in
+nact/nautilus-actions-config
 po/Makefile.in
 ])
 
