@@ -231,7 +231,7 @@ class ConfigParser:
 		self.uid = os.getuid ()
 		self.home_dir = pwd.getpwuid (self.uid)[5]
 		if self.uid == 0:
-			self.config_dir = ["@datadir@/nautilus-actions"]
+			self.config_dir = ["@prefix@/share/nautilus-actions"]
 		else:
 			current_config_dir = self.home_dir + "/.config/nautilus-actions"
 			old_configdir = self.home_dir + "/.nautilus-actions"
@@ -244,7 +244,7 @@ class ConfigParser:
 				os.rename (old_configdir, current_config_dir);
 			#
 
-			self.config_dir = [current_config_dir, "@datadir@/nautilus-actions"]
+			self.config_dir = [current_config_dir, "@prefix@/share/nautilus-actions"]
 				
 
 class ConfigReader (ConfigParser):
@@ -474,7 +474,7 @@ class ConfigWriter (ConfigParser):
 
 class NACTGui (gtk.glade.XML):
 	def __init__ (self, windowname):
-		gladefile = "@datadir@/nautilus-actions/nautilus-actions-config.glade"
+		gladefile = "@prefix@/share/nautilus-actions/nautilus-actions-config.glade"
 		gtk.glade.XML.__init__ (self, gladefile, windowname)
 		self.widget = self.get_widget (windowname)
 	
